# snt_utils

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
snt_lib/: __init__.py  snt_pipeline_utils.py
tests/: test_snt_pipeline_utils.py
tests/fixtures/: SNT_config_pop_def_missing.json  SNT_config_valid.json
